# glab-dash

./: CLAUDE.md  Cargo.toml  Makefile  README.md  _typos.toml
.github/workflows/: ci.yml
src/: app.rs  cache.rs  cmd.rs  config.rs  config_tests.rs  db.rs  event.rs  keybindings.rs  main.rs  onboarding.rs  onboarding_tests.rs
src/app/: actions.rs  async_msg.rs  execute.rs  fetch.rs  filter.rs  issue_actions.rs  keys.rs  mr_actions.rs  overlay.rs  render.rs
src/filter/: condition.rs  mod.rs  tests.rs
src/gitlab/: client.rs  mod.rs  types.rs
src/sort/: label_order.rs  mod.rs  spec.rs  tests.rs
src/ui/: keys.rs  markdown.rs  mod.rs  styles.rs
src/ui/components/: autocomplete.rs  chord_popup.rs  confirm_dialog.rs  error_popup.rs  filter_bar.rs  help.rs  input.rs  label_editor.rs  mod.rs  picker.rs  status_bar.rs  tab_bar.rs
src/ui/views/: dashboard.rs  filter_editor.rs  issue_detail.rs  issue_list.rs  list_model.rs  list_model_tests.rs  mod.rs  mr_detail.rs  mr_list.rs  planning.rs
