[package]
name = "glab-dash"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
fuzzy-matcher = "0.3"
open = "5"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
tui-textarea = "0.7"
rpassword = "7"
comrak = "0.52.0"
rusqlite = { version = "0.33", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow noisy pedantic lints that don't improve this codebase
too_many_lines = "allow"            # large match-based event handlers are idiomatic
items_after_statements = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"              # internal code, not a library
wildcard_imports = "allow"          # crate uses glob imports by convention
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
warnings = "deny"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
